[build-system]
    requires = ['setuptools', 'wheel', 'toml', 'scikit-build', 'cmake>=3.13', 'cython', 'numpy>=1.20']
    build-backend = 'setuptools.build_meta'  # Should be switched to skbuild-backend as soon as available.

# This is not yet used by any backend tool, but we comply with PEP 621 and PEP 631 anyway.
[project]
    name = "pyquest"
    version = "0.0.1"
    description = "A Python interface for QuEST."
    readme = "./README.md"
    authors = [
        {name = "Richard Meister", email = "richardm.tug@gmail.com"},
    ]
    classifiers=[
        "Development Status :: 2 - Pre-Alpha",
        "Environment :: Console",
        "Environment :: GPU :: NVIDIA CUDA",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: C++",
        "Programming Language :: Cython",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Scientific/Engineering :: Physics",
    ]
    dependencies = ['numpy>=1.20']

    [project.urls]
    homepage = "https://github.com/rrmeister/pyQuEST"
